2006-12-29  Akim Demaille  <akim.demaille@free.fr>

	Upgrade check.mk
	* check.mk (am__rst_section, am__rst_subsection)
	(am__text_box, am__check_pre, am__check_post): New.
	Use the latter two to factor the log production rules.
	Use the former ones to improve the Rst output of the log.

2006-12-28  POTHIER Benoit  <benoit.pothier@gmx.net>

	Fix header inclusion in test for qscintilla presence. 
	* qscintilla2.m4: Prepend Qsci subdir in include.

2006-12-27  Akim Demaille  <akim.demaille@free.fr>

	Produce a Rst ready log
	* check.mk: here.

2006-12-27  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	More restyling.
	* restyle (one_stm_per_line): Skip lines containing ';' (too hard to
	  handle).
	  (reindent): Re-indent one-line for loops. Handle const-methods
	  written on a single line. Keywords must be followed by a space.

2006-12-26  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	More restyling.
	* restyle (one_stm_per_line): Skip lines containing a string with a
	  semi-colon (case too hard to handle properly).
	  (reindent): Re-indent one-line while loops. Use libport/windows.hh
	  instead of Windows.h.

2006-12-26  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Handle more cases.
	* restyle: Enhance regexps for better matches.

2006-12-26  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	More restyling.
	* restyle: Handle more than 2 exps on a single line.
	  (one_stm_per_line): New sub. Rewrite one line statements by putting
	  them on their own line.
	  (reindent): Re-indent one-line inline methods. Match more cases for
	  strcmp and useless parenthesis used in if/while statements. Use
	  post-incrementation (++i) which is useful when i is an iterator.

2006-12-26  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	More restyling.
	* restyle: Handle spaces at the end (excepted for trailing spaces that
	  are removed both at the beginning and at the end). Factor some
	  regexps using variables. Re-indent properly 'else if' statements